--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ documentation = "https://docs.rs/lapacke"
 homepage = "https://github.com/stainless-steel/lapacke"
 repository = "https://github.com/stainless-steel/lapacke"
 readme = "README.md"
+
+[dependencies]
+lapacke-sys = "0.1"
+libc = "0.2"
+num-complex = { version = "0.1", default-features = false }
