--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "lapacke"
 version = "0.2.0"
 license = "Apache-2.0/MIT"
-authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
+authors = [
+    "Ivan Ukhov <ivan.ukhov@gmail.com>",
+    "Toshiki Teramura <toshiki.teramura@gmail.com>",
+]
 description = "The package provides wrappers for LAPACKE (C)."
 documentation = "https://docs.rs/lapacke"
 homepage = "https://github.com/blas-lapack-rs/lapacke"
