--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lapacke-sys"]
 	path = lapacke-sys
-	url = git@github.com:blas-lapack-rs/lapacke-sys.git
+	url = https://github.com/blas-lapack-rs/lapacke-sys.git
